Navigation component customized, Header fixed, Text-aligned to center in welcome page..

--- a/HexiCloud/public_html/css/hc-common.css
+++ b/HexiCloud/public_html/css/hc-common.css
@@ -13,8 +13,12 @@ body {
     font-weight: normal;
 }
 
-header {
+header-content {
     height: 80px;
+}
+
+#module {
+    margin-top: 80px;
 }
 
 html, body, .responsive-height {
