--- a/HexiCloud/public_html/css/hc-header.css
+++ b/HexiCloud/public_html/css/hc-header.css
@@ -12,6 +12,8 @@ and open the template in the editor.
     position: fixed;
     top: 0;
     width: 100%;
+    background-color: rgba(216, 225, 229, 1);
+    box-shadow: 0px 2px 2px rgba(216, 225, 229, 1);
     box-sizing: border-box;
     z-index: 9999;
 }
@@ -28,10 +30,15 @@ and open the template in the editor.
 
 .header-start-item, .header-end-item {
     color: #324b5c;
+    cursor: pointer;
 }
 
 .header-branding {
     color: #000;
+}
+
+.header-wrapper .ico-container i {
+    font-size: 36px !important;
 }
 
 .brand-logo {
